[tool.poetry]
name = "hevy-reporting"
version = "0.1.0"
description = ""
authors = ["Bosire Nyakundi <Nyakundi@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "hevy_reporting"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
